Update requirements.txt with new package versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,208 @@
+anyio==4.1.0
+appnope==0.1.3
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
 arviz==0.14.0
+asttokens==2.4.1
+async-lru==2.0.4
+attrs==23.1.0
+Babel==2.13.1
 bambi==0.12.0
+beautifulsoup4==4.12.2
+black==23.11.0
+bleach==6.1.0
+boto3==1.33.6
+botocore==1.33.6
+brainbox==0.0.6
 cachetools==5.3.2
-certifi==2023.7.22
+certifi==2023.11.17
+cffi==1.16.0
+cfgv==3.4.0
 cftime==1.6.3
-charset-normalizer==3.3.1
+charset-normalizer==3.3.2
+click==8.1.7
 cloudpickle==3.0.0
+colorama==0.4.6
 coloredlogs==15.0.1
+colorlog==6.8.0
+comm==0.2.0
 cons==0.4.6
-contourpy==1.1.1
+contourpy==1.2.0
 cycler==0.12.1
-Cython==3.0.4
+Cython==3.0.6
+debugpy==1.8.0
+decorator==5.1.1
+defusedxml==0.7.1
+distlib==0.3.7
 etuples==0.3.9
+exceptiongroup==1.2.0
+executing==2.0.1
+fastjsonschema==2.19.0
 fastprogress==1.0.3
-filelock==3.12.4
+filelock==3.13.1
+flake8==6.1.0
 flatbuffers==23.5.26
-fonttools==4.43.1
+fonttools==4.46.0
 formulae==0.5.1
-fsspec==2023.10.0
+fqdn==1.5.1
+fsspec==2023.12.0
+ghp-import==2.1.0
 graphviz==0.20.1
+griffe==0.38.0
+h5py==3.10.0
 hddm-wfpt==0.1.2
 HSSM==0.1.5
 huggingface-hub==0.15.1
 humanfriendly==10.0
-idna==3.4
-jax==0.4.19
-jaxlib==0.4.19
+iblutil==1.7.1
+identify==2.5.32
+idna==3.6
+iniconfig==2.0.0
+ipykernel==6.27.1
+ipython==8.18.1
+ipywidgets==8.1.1
+isoduration==20.11.0
+jax==0.4.20
+jaxlib==0.4.20
+jedi==0.19.1
+Jinja2==3.1.2
+jmespath==1.0.1
 joblib==1.3.2
+json5==0.9.14
+jsonpointer==2.4
+jsonschema==4.20.0
+jsonschema-specifications==2023.11.2
+jupyter-events==0.9.0
+jupyter-lsp==2.2.1
+jupyter_client==8.6.0
+jupyter_core==5.5.0
+jupyter_server==2.11.1
+jupyter_server_terminals==0.4.4
+jupyterlab==4.0.9
+jupyterlab-widgets==3.0.9
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.25.2
+jupytext==1.15.2
 kiwisolver==1.4.5
+kornia==0.7.0
+llvmlite==0.41.1
 logical-unification==0.4.6
-matplotlib==3.8.0
+Markdown==3.5.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.8.2
+matplotlib-inline==0.1.6
+mccabe==0.7.0
+mdit-py-plugins==0.4.0
+mdurl==0.1.2
+mergedeep==1.3.4
 miniKanren==1.0.3
+mistune==3.0.2
+mkdocs==1.5.3
+mkdocs-autorefs==0.5.0
+mkdocs-jupyter==0.24.6
+mkdocs-material==9.4.14
+mkdocs-material-extensions==1.3.1
+mkdocstrings==0.24.0
+mkdocstrings-python==1.7.5
 ml-dtypes==0.3.1
 mpmath==1.3.0
 multipledispatch==1.0.0
+mypy==1.7.1
+mypy-extensions==1.0.0
+nbclient==0.9.0
+nbconvert==7.11.0
+nbformat==5.9.2
+nest-asyncio==1.5.8
 netCDF4==1.6.5
-numpy==1.26.1
+networkx==3.2.1
+nodeenv==1.8.0
+notebook_shim==0.2.3
+numba==0.58.1
+numpy==1.25.2
 numpyro==0.12.1
-onnx==1.14.1
-onnxruntime==1.16.1
+oldest-supported-numpy==2023.10.25
+ONE-api==2.5.0
+onnx==1.15.0
+onnxruntime==1.16.3
 opt-einsum==3.3.0
+overrides==7.4.0
 packaging==23.2
-pandas==2.1.1
+paginate==0.5.6
+pandas==2.1.3
+pandocfilters==1.5.0
+parso==0.8.3
+pathspec==0.11.2
+pexpect==4.9.0
 Pillow==10.1.0
-protobuf==4.24.4
+platformdirs==4.0.0
+pluggy==1.3.0
+pre-commit==2.21.0
+prometheus-client==0.19.0
+prompt-toolkit==3.0.41
+protobuf==4.25.1
 psutil==5.9.6
+Psychofit==1.0.0.post0
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==14.0.1
+pycodestyle==2.11.1
+pycparser==2.21
+pyflakes==3.1.0
+Pygments==2.17.2
 pymc==5.6.1
+pymdown-extensions==10.5
 pyparsing==3.1.1
 pytensor==2.12.3
+pytest==7.4.3
 python-dateutil==2.8.2
+python-json-logger==2.0.7
 pytz==2023.3.post1
 PyYAML==6.0.1
+pyyaml_env_tag==0.1
+pyzmq==25.1.1
+referencing==0.31.1
+regex==2023.10.3
 requests==2.31.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.13.2
+ruff==0.1.6
+s3transfer==0.8.2
 scikit-learn==1.3.2
 scipy==1.10.1
+seaborn==0.13.0
+Send2Trash==1.8.2
 six==1.16.0
+sniffio==1.3.0
+soupsieve==2.5
 ssm-simulators==0.3.2
+stack-data==0.6.3
 sympy==1.12
+terminado==0.18.0
 threadpoolctl==3.2.0
+tinycss2==1.2.1
+tokenize-rt==5.2.0
+toml==0.10.2
+tomli==2.0.1
 toolz==0.12.0
+torch==2.1.1
+torchvision==0.16.1
+tornado==6.4
 tqdm==4.66.1
+traitlets==5.14.0
+types-python-dateutil==2.8.19.14
 typing_extensions==4.8.0
 tzdata==2023.3
+uri-template==1.3.0
 urllib3==2.0.7
-xarray==2023.10.1
+virtualenv==20.25.0
+watchdog==3.0.0
+wcwidth==0.2.12
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.6.4
+widgetsnbextension==4.0.9
+xarray==2023.11.0
 xarray-einstats==0.6.0
