--- a/requirements.txt
+++ b/requirements.txt
@@ -1,208 +1,106 @@
-anyio==4.1.0
-appnope==0.1.3
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
+absl-py==2.0.0
 arviz==0.14.0
-asttokens==2.4.1
-async-lru==2.0.4
-attrs==23.1.0
-Babel==2.13.1
+asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
 bambi==0.12.0
-beautifulsoup4==4.12.2
-black==23.11.0
-bleach==6.1.0
-boto3==1.33.6
-botocore==1.33.6
-brainbox==0.0.6
+blackjax==1.0.0
 cachetools==5.3.2
 certifi==2023.11.17
-cffi==1.16.0
-cfgv==3.4.0
 cftime==1.6.3
 charset-normalizer==3.3.2
-click==8.1.7
+chex==0.1.85
 cloudpickle==3.0.0
-colorama==0.4.6
+colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
 coloredlogs==15.0.1
-colorlog==6.8.0
-comm==0.2.0
+comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1691044910542/work
 cons==0.4.6
 contourpy==1.2.0
 cycler==0.12.1
 Cython==3.0.6
-debugpy==1.8.0
-decorator==5.1.1
-defusedxml==0.7.1
-distlib==0.3.7
+debugpy @ file:///D:/bld/debugpy_1695534451132/work
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
 etuples==0.3.9
-exceptiongroup==1.2.0
-executing==2.0.1
-fastjsonschema==2.19.0
+exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1700579780973/work
+executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
 fastprogress==1.0.3
 filelock==3.13.1
-flake8==6.1.0
 flatbuffers==23.5.26
 fonttools==4.46.0
 formulae==0.5.1
-fqdn==1.5.1
-fsspec==2023.12.0
-ghp-import==2.1.0
+fsspec==2023.12.1
 graphviz==0.20.1
-griffe==0.38.0
-h5py==3.10.0
 hddm-wfpt==0.1.2
 HSSM==0.1.5
 huggingface-hub==0.15.1
 humanfriendly==10.0
-iblutil==1.7.1
-identify==2.5.32
 idna==3.6
-iniconfig==2.0.0
-ipykernel==6.27.1
-ipython==8.18.1
-ipywidgets==8.1.1
-isoduration==20.11.0
-jax==0.4.20
-jaxlib==0.4.20
-jedi==0.19.1
-Jinja2==3.1.2
-jmespath==1.0.1
+importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1701632192416/work
+intel-openmp==2024.0.0
+ipykernel @ file:///D:/bld/ipykernel_1698244157926/work
+ipython @ file:///D:/bld/ipython_1701831845989/work
+jax==0.4.21
+jaxlib==0.4.21
+jaxopt==0.8.2
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
 joblib==1.3.2
-json5==0.9.14
-jsonpointer==2.4
-jsonschema==4.20.0
-jsonschema-specifications==2023.11.2
-jupyter-events==0.9.0
-jupyter-lsp==2.2.1
-jupyter_client==8.6.0
-jupyter_core==5.5.0
-jupyter_server==2.11.1
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.9
-jupyterlab-widgets==3.0.9
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.25.2
-jupytext==1.15.2
+jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1699283905679/work
+jupyter_core @ file:///D:/bld/jupyter_core_1698673822668/work
 kiwisolver==1.4.5
-kornia==0.7.0
-llvmlite==0.41.1
 logical-unification==0.4.6
-Markdown==3.5.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
 matplotlib==3.8.2
-matplotlib-inline==0.1.6
-mccabe==0.7.0
-mdit-py-plugins==0.4.0
-mdurl==0.1.2
-mergedeep==1.3.4
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1660814786464/work
 miniKanren==1.0.3
-mistune==3.0.2
-mkdocs==1.5.3
-mkdocs-autorefs==0.5.0
-mkdocs-jupyter==0.24.6
-mkdocs-material==9.4.14
-mkdocs-material-extensions==1.3.1
-mkdocstrings==0.24.0
-mkdocstrings-python==1.7.5
+mkl==2024.0.0
+mkl-service==2.4.0
 ml-dtypes==0.3.1
 mpmath==1.3.0
 multipledispatch==1.0.0
-mypy==1.7.1
-mypy-extensions==1.0.0
-nbclient==0.9.0
-nbconvert==7.11.0
-nbformat==5.9.2
-nest-asyncio==1.5.8
+nest-asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1697083700168/work
 netCDF4==1.6.5
-networkx==3.2.1
-nodeenv==1.8.0
-notebook_shim==0.2.3
-numba==0.58.1
 numpy==1.25.2
 numpyro==0.12.1
-oldest-supported-numpy==2023.10.25
-ONE-api==2.5.0
 onnx==1.15.0
 onnxruntime==1.16.3
 opt-einsum==3.3.0
-overrides==7.4.0
-packaging==23.2
-paginate==0.5.6
+optax==0.1.7
+packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1696202382185/work
 pandas==2.1.3
-pandocfilters==1.5.0
-parso==0.8.3
-pathspec==0.11.2
-pexpect==4.9.0
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1638334955874/work
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
 Pillow==10.1.0
-platformdirs==4.0.0
-pluggy==1.3.0
-pre-commit==2.21.0
-prometheus-client==0.19.0
-prompt-toolkit==3.0.41
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1701708255999/work
+prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1699963054032/work
 protobuf==4.25.1
-psutil==5.9.6
+psutil @ file:///D:/bld/psutil_1695367331398/work
 Psychofit==1.0.0.post0
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==14.0.1
-pycodestyle==2.11.1
-pycparser==2.21
-pyflakes==3.1.0
-Pygments==2.17.2
+pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1700607939962/work
 pymc==5.6.1
-pymdown-extensions==10.5
 pyparsing==3.1.1
+pyreadline3==3.4.1
 pytensor==2.12.3
-pytest==7.4.3
-python-dateutil==2.8.2
-python-json-logger==2.0.7
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
 pytz==2023.3.post1
+pywin32==306
 PyYAML==6.0.1
-pyyaml_env_tag==0.1
-pyzmq==25.1.1
-referencing==0.31.1
-regex==2023.10.3
+pyzmq @ file:///D:/bld/pyzmq_1701783313681/work
 requests==2.31.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.13.2
-ruff==0.1.6
-s3transfer==0.8.2
 scikit-learn==1.3.2
 scipy==1.10.1
 seaborn==0.13.0
-Send2Trash==1.8.2
-six==1.16.0
-sniffio==1.3.0
-soupsieve==2.5
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
 ssm-simulators==0.3.2
-stack-data==0.6.3
+stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
 sympy==1.12
-terminado==0.18.0
+tbb==2021.11.0
 threadpoolctl==3.2.0
-tinycss2==1.2.1
-tokenize-rt==5.2.0
-toml==0.10.2
-tomli==2.0.1
 toolz==0.12.0
-torch==2.1.1
-torchvision==0.16.1
-tornado==6.4
+tornado @ file:///D:/bld/tornado_1695373601455/work
 tqdm==4.66.1
-traitlets==5.14.0
-types-python-dateutil==2.8.19.14
-typing_extensions==4.8.0
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1701095650114/work
+typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1695040754690/work
 tzdata==2023.3
-uri-template==1.3.0
-urllib3==2.0.7
-virtualenv==20.25.0
-watchdog==3.0.0
-wcwidth==0.2.12
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.6.4
-widgetsnbextension==4.0.9
+urllib3==2.1.0
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1700607916581/work
 xarray==2023.11.0
 xarray-einstats==0.6.0
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
