--- a/requirements.txt
+++ b/requirements.txt
@@ -1,106 +1,99 @@
-absl-py==2.0.0
-arviz==0.14.0
+appnope @ file:///home/conda/feedstock_root/build_artifacts/appnope_1707233003401/work
+arviz==0.19.0
 asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
-bambi==0.12.0
-blackjax==1.0.0
-cachetools==5.3.2
-certifi==2023.11.17
-cftime==1.6.3
+bambi==0.14.0
+Bottleneck @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_2bxpizxa3c/croot/bottleneck_1707864819812/work
+cachetools==5.5.0
+certifi==2024.8.30
 charset-normalizer==3.3.2
-chex==0.1.85
 cloudpickle==3.0.0
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
-coloredlogs==15.0.1
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1691044910542/work
+comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
 cons==0.4.6
-contourpy==1.2.0
+contourpy==1.3.0
 cycler==0.12.1
-Cython==3.0.6
-debugpy @ file:///D:/bld/debugpy_1695534451132/work
+debugpy @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_563_nwtkoc/croot/debugpy_1690905063850/work
 decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
+dm-tree==0.1.8
 etuples==0.3.9
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1700579780973/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
-fastprogress==1.0.3
-filelock==3.13.1
-flatbuffers==23.5.26
-fonttools==4.46.0
-formulae==0.5.1
-fsspec==2023.12.1
-graphviz==0.20.1
-hddm-wfpt==0.1.2
-HSSM==0.1.5
-huggingface-hub==0.15.1
-humanfriendly==10.0
-idna==3.6
-importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1701632192416/work
-intel-openmp==2024.0.0
-ipykernel @ file:///D:/bld/ipykernel_1698244157926/work
-ipython @ file:///D:/bld/ipython_1701831845989/work
-jax==0.4.21
-jaxlib==0.4.21
-jaxopt==0.8.2
+exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1720869315914/work
+executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1725214404607/work
+filelock==3.16.1
+fonttools==4.53.1
+formulae==0.5.4
+fsspec==2024.9.0
+graphviz==0.20.3
+h5netcdf==1.3.0
+h5py==3.11.0
+hddm_wfpt==0.1.4
+HSSM @ git+https://github.com/lnccbrown/HSSM.git@4bd6c7795a74f71b5f791ddb580d079384f59e51
+huggingface-hub==0.24.7
+idna==3.10
+importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1726082825846/work
+ipykernel @ file:///Users/runner/miniforge3/conda-bld/ipykernel_1719845458456/work
+ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1725050136642/work
+ipywidgets @ file:///home/conda/feedstock_root/build_artifacts/ipywidgets_1724334859652/work
+jax==0.4.33
+jaxlib==0.4.33
 jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
-joblib==1.3.2
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1699283905679/work
-jupyter_core @ file:///D:/bld/jupyter_core_1698673822668/work
-kiwisolver==1.4.5
+joblib==1.4.2
+jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1726610684920/work
+jupyter_core @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_73nomeum4p/croot/jupyter_core_1718818302815/work
+jupyterlab_widgets @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_widgets_1724331334887/work
+kiwisolver==1.4.7
 logical-unification==0.4.6
-matplotlib==3.8.2
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1660814786464/work
+markdown-it-py==3.0.0
+matplotlib==3.9.2
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
+mdurl==0.1.2
 miniKanren==1.0.3
-mkl==2024.0.0
-mkl-service==2.4.0
-ml-dtypes==0.3.1
-mpmath==1.3.0
+ml_dtypes==0.5.0
 multipledispatch==1.0.0
-nest-asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1697083700168/work
-netCDF4==1.6.5
-numpy==1.25.2
-numpyro==0.12.1
-onnx==1.15.0
-onnxruntime==1.16.3
+nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
+numexpr @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_45yefq0kt6/croot/numexpr_1696515289183/work
+numpy @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a51i_mbs7m/croot/numpy_and_numpy_base_1708638620867/work/dist/numpy-1.26.4-cp311-cp311-macosx_11_0_arm64.whl#sha256=3d90dd3382cff7becb2384f73058a8e72b81c697e8bb77f1c69a82caca5b0c57
+numpyro==0.15.3
+onnx==1.16.2
 opt-einsum==3.3.0
-optax==0.1.7
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1696202382185/work
-pandas==2.1.3
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1638334955874/work
+packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1718189413536/work
+pandas==2.2.3
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
+patsy @ file:///home/conda/feedstock_root/build_artifacts/patsy_1704469236901/work
+pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
 pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-Pillow==10.1.0
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1701708255999/work
-prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1699963054032/work
-protobuf==4.25.1
-psutil @ file:///D:/bld/psutil_1695367331398/work
-Psychofit==1.0.0.post0
-pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1700607939962/work
-pymc==5.6.1
-pyparsing==3.1.1
-pyreadline3==3.4.1
-pytensor==2.12.3
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
-pytz==2023.3.post1
-pywin32==306
-PyYAML==6.0.1
-pyzmq @ file:///D:/bld/pyzmq_1701783313681/work
-requests==2.31.0
-scikit-learn==1.3.2
-scipy==1.10.1
-seaborn==0.13.0
+pillow==10.4.0
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1726613481435/work
+prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1718047967974/work
+protobuf==5.28.2
+psutil @ file:///Users/cbousseau/work/recipes/ci_py311_2/psutil_1678995687212/work
+ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1721585709575/work
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1714846767233/work
+pymc==5.16.2
+pyparsing==3.1.4
+pytensor==2.25.4
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
+pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1726055524169/work
+PyYAML==6.0.2
+pyzmq @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_43pxpbos3z/croot/pyzmq_1705605108344/work
+requests==2.32.3
+rich==13.8.1
+scikit-learn==1.5.2
+scipy @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_b9t0odioph/croot/scipy_1717521487325/work/dist/scipy-1.13.1-cp311-cp311-macosx_11_0_arm64.whl#sha256=63d35c85356bd6a7d204bc184b0cd2a0220b8c9faf06c4f5de5a4e6bc73325f3
+seaborn==0.13.2
 six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
-ssm-simulators==0.3.2
+ssm-simulators==0.7.5
 stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
-sympy==1.12
-tbb==2021.11.0
-threadpoolctl==3.2.0
-toolz==0.12.0
-tornado @ file:///D:/bld/tornado_1695373601455/work
-tqdm==4.66.1
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1701095650114/work
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1695040754690/work
-tzdata==2023.3
-urllib3==2.1.0
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1700607916581/work
-xarray==2023.11.0
-xarray-einstats==0.6.0
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
+statsmodels @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_af8vmuwbis/croot/statsmodels_1718381196260/work
+threadpoolctl==3.5.0
+toolz==0.12.1
+tornado @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a4w03z48br/croot/tornado_1718740114858/work
+tqdm==4.66.5
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
+typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1717802530399/work
+tzdata @ file:///home/conda/feedstock_root/build_artifacts/python-tzdata_1707747584337/work
+urllib3==2.2.3
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
+widgetsnbextension @ file:///home/conda/feedstock_root/build_artifacts/widgetsnbextension_1724331337528/work
+xarray==2024.9.0
+xarray-einstats==0.8.0
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1726248574750/work
